                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-07-2005 fixed: memleak in RAM control
 - 14-07-2005 fixed: memleak in RSS control
 - 14-07-2005 updated: Korean language file (Thnx to AkoXko)
 - 14-07-2005 updated: Italian language file (Thnx to kotix)
 - 14-07-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 14-07-2005 updated: German language file
 - 14-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 14-07-2005 updated: Finnish language file (Thnx to jutski)
 - 14-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 14-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 14-07-2005 fixed: dvdplayer, playing a vob file resulted in a crash with the new ffmpeg
 - 14-07-2005 added: dvdplayer, extra audio stream information in OSD
 - 14-07-2005 fixed: dvdplayer, no audio streams are reported when playing an avi file
 - 14-07-2005 fixed: Constant hdd access in weather.
 - 14-07-2005 changed: leak tracking, smarter define of the debug new operator (in stdafx.h only) no need for a macro in each cpp file
 - 14-07-2005 fixed: memleak in the rar archive reader
 - 13-07-2005 fixed: Music Library "All" items producing "No Scanned Information" error
 - 13-07-2005 fixed: ftp server can not be shut down via settings menu
 - 13-07-2005 fixed: reference controls got not freed after skin load
 - 13-07-2005 fixed: small mem leak in weather
 - 13-07-2005 changed: enabled CRT mem leak tracking in debug builds
                       To get a dump of leaks in the vc output window use the shutdown menu to shut down the application.